// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`admin option error messages > maps everyone role error 1`] = `
{
  "content": "-# Everyone point and laugh at <@1454944471358898209>! <:emoji:1474191899781758976>",
  "embeds": [
    {
      "color": 10038562,
      "description": "\`@everyone\` cannot be configured as an LFG pingable role.",
    },
  ],
  "flags": [
    64,
  ],
  "kind": "ERROR",
}
`;

exports[`admin option error messages > maps invalid options 1`] = `
{
  "content": "-# Everyone point and laugh at <@1454944471358898209>! <:emoji:1474191899781758976>",
  "embeds": [
    {
      "color": 10038562,
      "description": "Invalid options",
    },
  ],
  "flags": [
    64,
  ],
  "kind": "ERROR",
}
`;

exports[`admin option error messages > maps invalid role options 1`] = `
{
  "content": "-# Everyone point and laugh at <@1454944471358898209>! <:emoji:1474191899781758976>",
  "embeds": [
    {
      "color": 10038562,
      "description": "Invalid options",
    },
  ],
  "flags": [
    64,
  ],
  "kind": "ERROR",
}
`;

exports[`admin option error messages > maps missing value: Missing channel 1`] = `
{
  "content": "-# Everyone point and laugh at <@1454944471358898209>! <:emoji:1474191899781758976>",
  "embeds": [
    {
      "color": 10038562,
      "description": "Missing channel",
    },
  ],
  "flags": [
    64,
  ],
  "kind": "ERROR",
}
`;

exports[`admin option error messages > maps missing value: Missing role 1`] = `
{
  "content": "-# Everyone point and laugh at <@1454944471358898209>! <:emoji:1474191899781758976>",
  "embeds": [
    {
      "color": 10038562,
      "description": "Missing role",
    },
  ],
  "flags": [
    64,
  ],
  "kind": "ERROR",
}
`;
